--- a/app/views/public/events/index.html.erb
+++ b/app/views/public/events/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container mt-5">
-
+  <dl class="searchbox">
+  <%= search_form_for @search, url: searches_path do |f| %>
+    <dt><%= f.text_field :station ,placeholder: '検索するテキストを入力...' %></dt>
+    <dd><%= f.submit ("検索") , class: 'search-btn'%></dd>
+  <% end %>
+</dl>
   <h4>イベント一覧</h4>
   <table class="table">
    
