[add]search_function

--- a/app/views/admins/staffs/index.html.erb
+++ b/app/views/admins/staffs/index.html.erb
@@ -3,7 +3,7 @@
    
     <thead class="thead-dark">
       <tr>
-        <th scope="col">MN-ID</th>
+        <th scope="col">NM-ID</th>
         <th scope="col">姓</th>
         <th scope="col">名</th>
         <th scope="col">email</th>
