--- a/app/views/staffs/registrations/new.html.erb
+++ b/app/views/staffs/registrations/new.html.erb
@@ -4,6 +4,16 @@
   <%= render "staffs/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :family_name %><br />
+    <%= f.text_field :family_name, autofocus: true, autocomplete: "family_name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :given_name %><br />
+    <%= f.text_field :given_name, autofocus: true, autocomplete: "given_name" %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
